# Nussinov78

./: Nussinov78.cabal  Nussinov78.hs
BioInf/: GAPlike.hs  Nussinov78.hs
C/: nussinov.c
