name:           Nussinov78
version:        0.1.0.1
author:         Christian Hoener zu Siederdissen, 2011-2012
copyright:      Christian Hoener zu Siederdissen, 2011-2012
homepage:       http://www.tbi.univie.ac.at/~choener/adpfusion
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Nussinov78 using the ADPfusion library.
description:
                The Nussinov78 RNA secondary structure prediction algorithm
                using the ADPfusion framework.
                .
                This algorithm is simple enough to be used as a tutorial-type
                example. It also shows that efficient code is possible. The
                ADPfusion code compared to C is slower by a factor of only 1.2.
                We plan to improve upon this.
                .
                A number of helper functions currently present in
                BioInf.Nussinov78 will later move in their own library.
                .
                Build using GHC-7.6.1, the new code generator and llvm for best
                performance.
                .
                For comparison, a version of the algorithm written in C is
                available under C/nussinov.c. Use at least
                "gcc -O3 nussinov.c".



Extra-Source-Files:
  C/nussinov.c



library
  build-depends:
    base >= 4 && < 5,
    mtl            >= 2     ,
    primitive      >= 0.5   ,
    vector         >= 0.10  ,
    PrimitiveArray >= 0.5.1 ,
--    ADPfusion      >= 0.1.1 ,
    ghc-prim,
    repa,
    deepseq,
    QuickCheck,
    strict
  exposed-modules:
    BioInf.Nussinov78
  ghc-options:
    -Odph
    -O2
    -funbox-strict-fields
    -funfolding-use-threshold100
    -funfolding-keeness-factor100
--    -fno-spec-constr-threshold -fspec-constr-count=20
--    -fnew-codegen
    -fllvm
    -optlo-O3
    -optc-O3
    -optc-march=native
    -optlo-std-compile-opts
--    -fllvm-tbaa



executable Nussinov78
  build-depends:
  main-is:
    Nussinov78.hs
  other-modules:
--    BioInf.Nussinov78
  ghc-options:
    -Odph
    -O2
    -funbox-strict-fields
    -funfolding-use-threshold100
    -funfolding-keeness-factor100
--    -fno-spec-constr-threshold -fspec-constr-count=20
--    -fnew-codegen
    -fllvm
    -optlo-O3
    -optc-O3
    -optc-march=native
    -optlo-std-compile-opts
--    -fllvm-tbaa



source-repository head
  type: git
  location: git://github.com/choener/Nussinov78

